# dubizzle-car-ai-assistant

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
data/: Copy_of_sample_cars_dataset.xlsx
services/: booking.py  booking_flow.py  car_details.py  car_utils.py  chat_service.py  comparison.py  data_loader.py  guardrails.py  listing_attributes.py  llm_agent.py  memory.py  memory_search.py  query_planner.py  retrieval.py  search_flow.py  session_memory.py
storage/: bookings.csv
tests/: test_chat_booking.py  test_comparison_positions.py  test_long_term_memory_summary.py  test_multi_constraint_search.py  test_natural_llm_responses.py  test_query_planner.py  test_session_memory_manual.py
