[project]
name = "dubizzle-car-ai-assistant"
version = "0.1.0"
description = "Conversational car inventory assistant with memory and viewing bookings"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.50.0",
]
